--- a/resources/locales/uk.po
+++ b/resources/locales/uk.po
@@ -11,11 +11,11 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
 "X-Search-Path: /lib/**:!/lib/components/**\n"
-"X-Generator: Poedit 3.3.1\n"
+"X-Generator: Poedit 3.3.2\n"
 
 #: lib/api/v1/test.js:64:46
 msgid "Test"
-msgstr ""
+msgstr "Тест"
 
 #: lib/api/v1/test.js:66:20
 #, javascript-format
@@ -24,3 +24,6 @@ msgid ""
 "\n"
 "Date: ${n}\n"
 msgstr ""
+"Кінцева точка запиту тестового сповіщення пропонує серверу App Store надіслати вашому серверу сповіщення з TEST notificationType.\n"
+"\n"
+"Дата: ${n}\n"
