--- a/lib/locales/ru.po
+++ b/lib/locales/ru.po
@@ -14,29 +14,34 @@ msgstr ""
 "X-Generator: Poedit 3.3.1\n"
 
 #: ../app.yaml
+#, fuzzy
 msgid "ACL test"
-msgstr ""
+msgstr "тест ACL"
 
 #: ../api/v1/test.js:81:46
+#, fuzzy
 msgid "ACL Test"
-msgstr ""
+msgstr "ACL-тест"
 
 #: ../components/telegram-test-bot/telegram/commands/settings.js:18:67
 msgid "Back"
 msgstr "Назад"
 
 #: ../components/telegram-test-bot/config.yaml
+#, fuzzy
 msgid "Bot read-only permissions"
-msgstr ""
+msgstr "Разрешения бота только на чтение"
 
 #: ../components/telegram-test-bot/bot/commands/start.js:30:40
 #: ../components/telegram-test-bot/bot/commands/start.js:34:40
+#, fuzzy
 msgid "open localhost"
-msgstr ""
+msgstr "открыть локальный хост"
 
 #: ../components/telegram-test-bot/config.yaml
+#, fuzzy
 msgid "Read-only"
-msgstr ""
+msgstr "Только чтение"
 
 #: ../components/telegram-test-bot/telegram/modules/start.js:12:28
 msgid "Settings"
@@ -55,12 +60,14 @@ msgid "Test"
 msgstr "Тест"
 
 #: ../app.yaml
+#, fuzzy
 msgid "Test notifications"
-msgstr ""
+msgstr "Тестовые уведомления"
 
 #: ../app.yaml
+#, fuzzy
 msgid "Test scope"
-msgstr ""
+msgstr "Объем испытаний"
 
 #: ../api/v1/test.js:66:20 ../api/v1/test.js:83:20
 #, javascript-format
@@ -74,5 +81,6 @@ msgstr ""
 "Дата: ${n}\n"
 
 #: ../components/telegram-test-bot/bot/commands/start.js:40:40
+#, fuzzy
 msgid "webapp"
-msgstr ""
+msgstr "веб-приложение"
