--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -27,6 +27,132 @@ const api = Api.new( "http://localhost/api/" )
 
 <!-- tabs:end -->
 
+## Nginx
+
+### Add nginx proxy
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+<!-- prettier-ignore -->
+```javascript
+const res = await api.call( "/v1/nginx/add-proxy", proxy_id, upstream_port, options );
+```
+
+#### **Shell**
+
+<!-- prettier-ignore -->
+```shell
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/nginx/add-proxy"
+```
+
+<!-- tabs:end -->
+
+-   `proxy_id` <string\>
+
+    <details>
+        <summary>JSON schema</summary>
+
+    ```json
+    {
+        "type": "string",
+        "fotmat": "kebab-case"
+    }
+    ```
+
+    </details>
+
+-   `upstream_port` <integer\>
+
+    <details>
+        <summary>JSON schema</summary>
+
+    ```json
+    {
+        "type": "integer",
+        "format": "ip-port"
+    }
+    ```
+
+    </details>
+
+-   `options` <Object\>
+
+    <details>
+        <summary>JSON schema</summary>
+
+    ```json
+    {
+        "type": "object",
+        "properties": {
+            "upstreamProxyProtocol": {
+                "type": "boolean"
+            },
+            "servers": {
+                "type": "array",
+                "minItems": 1,
+                "items": {
+                    "type": "object",
+                    "properties": {
+                        "port": {
+                            "type": "integer",
+                            "format": "ip-port"
+                        },
+                        "type": {
+                            "enum": ["http", "tcp", "udp"]
+                        },
+                        "serverName": {
+                            "anyOf": [
+                                {
+                                    "type": "null"
+                                },
+                                {
+                                    "type": "string",
+                                    "format": "nginx-server-name"
+                                },
+                                {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "string",
+                                        "format": "nginx-server-name"
+                                    },
+                                    "minItems": 1,
+                                    "uniqueItems": true
+                                }
+                            ]
+                        },
+                        "sslEnabled": {
+                            "type": "boolean"
+                        },
+                        "maxBodySize": {
+                            "type": "string",
+                            "format": "digital-size"
+                        },
+                        "cacheEnabled": {
+                            "type": "boolean"
+                        },
+                        "cacheBypass": {
+                            "type": "boolean"
+                        },
+                        "proxyProtocol": {
+                            "type": "boolean"
+                        }
+                    },
+                    "additionalProperties": false,
+                    "required": ["port"]
+                }
+            }
+        },
+        "additionalProperties": false,
+        "required": ["servers"]
+    }
+    ```
+
+    </details>
+
 ## Test
 
 ### Bench
@@ -133,7 +259,7 @@ curl \
     ```json
     {
         "file": {
-            "maxSize": 52428800,
+            "maxSize": "52428800",
             "contentType": ["text/plain", "text/html"]
         }
     }
