chore: dependencies update

--- a/docs/api/v1.md
+++ b/docs/api/v1.md
@@ -13,7 +13,7 @@
 ```javascript
 import Api from "@softvisio/core/api";
 
-const api = Api.new( "wss://localhost/api/" )
+const api = new Api( "wss://localhost/api/" )
 ```
 
 #### **HTTP**
@@ -22,7 +22,7 @@ const api = Api.new( "wss://localhost/api/" )
 ```javascript
 import Api from "@softvisio/core/api";
 
-const api = Api.new( "https://localhost/api/" )
+const api = new Api( "https://localhost/api/" )
 ```
 
 <!-- tabs:end -->
@@ -819,7 +819,7 @@ curl \
 
     ```json
     {
-        "enum": ["1 hour", "30 days"]
+        "enum": ["1 hour", "7 days", "30 days"]
     }
     ```
 
@@ -916,7 +916,7 @@ curl \
 
     ```json
     {
-        "enum": ["1 hour", "30 days"]
+        "enum": ["1 hour", "7 days", "30 days"]
     }
     ```
 
@@ -1528,19 +1528,6 @@ curl \
                 },
                 "additionalProperties": false,
                 "required": ["oauth_provider", "oauth_code", "oauth_redirect_uri"]
-            },
-            {
-                "type": "object",
-                "properties": {
-                    "telegram_bot_id": {
-                        "type": "integer"
-                    },
-                    "telegram_webapp_init_data": {
-                        "type": "string"
-                    }
-                },
-                "additionalProperties": false,
-                "required": ["telegram_bot_id", "telegram_webapp_init_data"]
             }
         ]
     }
@@ -4010,7 +3997,7 @@ curl \
         -   `subscribed` <Array\> Filter by the `subscribed` field value:
             -   <string\> Filter operator, one of the: `"="`.
             -   <boolean\> Field value.
-        -   `banned` <Array\> Filter by the `banned` field value:
+        -   `enabled` <Array\> Filter by the `enabled` field value:
             -   <string\> Filter operator, one of the: `"="`.
             -   <boolean\> Field value.
     -   `order_by` <Array\> Array of the sort conditions. **Default:** `[["username","asc"]]`. Each sort condition must be represented with the two-elements <Array\> with the following structure:
@@ -4088,7 +4075,7 @@ curl \
                     "type": "boolean",
                     "operator": "="
                 },
-                "banned": {
+                "enabled": {
                     "type": "boolean",
                     "operator": "="
                 }
@@ -4103,7 +4090,7 @@ curl \
 
     </details>
 
-### Set user banned
+### Set user enabled
 
 Method access permission: "telegram/bot/users:update".
 
@@ -4113,7 +4100,7 @@ Method access permission: "telegram/bot/users:update".
 
 <!-- prettier-ignore -->
 ```javascript
-const res = await api.call( "/v1/telegram/bots/users/set-user-banned", teleram_bot_id, teleram_bot_user_id, banned );
+const res = await api.call( "/v1/telegram/bots/users/set-user-enabled", teleram_bot_id, teleram_bot_user_id, enabled );
 ```
 
 #### **Shell**
@@ -4122,7 +4109,7 @@ const res = await api.call( "/v1/telegram/bots/users/set-user-banned", teleram_b
 ```shell
 curl \
     -H "Authorization: Bearer <YOUR-API-TOKEN>" \
-    "https://localhost/api/v1/telegram/bots/users/set-user-banned"
+    "https://localhost/api/v1/telegram/bots/users/set-user-enabled"
 ```
 
 <!-- tabs:end -->
@@ -4154,7 +4141,7 @@ curl \
 
     </details>
 
--   `banned` <boolean\>
+-   `enabled` <boolean\>
 
     <details>
         <summary>JSON schema</summary>
@@ -4234,7 +4221,7 @@ curl \
 
 <!-- prettier-ignore -->
 ```javascript
-const res = await api.call( "/v1/test/upload", fields );
+const res = await api.call( "/v1/test/upload", data );
 ```
 
 #### **Shell**
@@ -4248,7 +4235,7 @@ curl \
 
 <!-- tabs:end -->
 
--   `fields` <Object\>
+-   `data` <Object\>
 
     <details>
         <summary>JSON schema</summary>
@@ -4257,23 +4244,17 @@ curl \
     {
         "type": "object",
         "properties": {
-            "params": {
+            "options": {
                 "type": "object"
             },
-            "file1": {
+            "file": {
                 "file": {
                     "maxSize": "50 MB"
-                }
-            },
-            "file2": {
-                "file": {
-                    "maxSize": "50 MB",
-                    "contentType": "text/plain"
                 }
             }
         },
         "additionalProperties": false,
-        "required": []
+        "required": ["file"]
     }
     ```
 
