--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -13,7 +13,7 @@
 ```javascript
 import Api from "@softvisio/core/api";
 
-const api = Api.new( "ws://localhost/api/" )
+const api = new Api( "ws://localhost/api/" )
 ```
 
 #### **HTTP**
@@ -22,10 +22,47 @@ const api = Api.new( "ws://localhost/api/" )
 ```javascript
 import Api from "@softvisio/core/api";
 
-const api = Api.new( "http://localhost/api/" )
+const api = new Api( "http://localhost/api/" )
 ```
 
 <!-- tabs:end -->
+
+## Administration
+
+### Reset root user password
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+<!-- prettier-ignore -->
+```javascript
+const res = await api.call( "/v1/administration/reset-root-password", password? );
+```
+
+#### **Shell**
+
+<!-- prettier-ignore -->
+```shell
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/administration/reset-root-password"
+```
+
+<!-- tabs:end -->
+
+-   `password?` <string\>
+
+    <details>
+        <summary>JSON schema</summary>
+
+    ```json
+    {
+        "type": "string"
+    }
+    ```
+
+    </details>
 
 ## Nginx
 
@@ -237,7 +274,7 @@ For certain types of errors Playwright uses specific error classes. These classe
 
 <!-- prettier-ignore -->
 ```javascript
-const res = await api.call( "/v1/test/upload", file, data? );
+const res = await api.call( "/v1/test/upload", data );
 ```
 
 #### **Shell**
@@ -251,30 +288,27 @@ curl \
 
 <!-- tabs:end -->
 
--   `file` <File\> Uploaded file. Maximim file size: `52,428,800` bytes. Allowed content types: `"text/html"`, `"text/plain"`.
+-   `data` <Object\>
 
     <details>
         <summary>JSON schema</summary>
 
     ```json
     {
-        "file": {
-            "maxSize": "52428800",
-            "contentType": ["text/plain", "text/html"]
-        }
-    }
-    ```
-
-    </details>
-
--   `data?` <Object\>
-
-    <details>
-        <summary>JSON schema</summary>
-
-    ```json
-    {
-        "type": "object"
+        "type": "object",
+        "properties": {
+            "file": {
+                "file": {
+                    "maxSize": "52428800",
+                    "contentType": ["text/plain", "text/html"]
+                }
+            },
+            "options": {
+                "type": "object"
+            }
+        },
+        "additionalProperties": false,
+        "required": ["file"]
     }
     ```
 
